environments/prd/flag-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flag-service
  namespace: flag-service-prd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flag-service
  template:
    metadata:
      labels:
        app: flag-service
    spec:
      imagePullSecrets:
        - name: acr-pull-secret
      containers:
        - name: flag-service
          image: toggleacrfase4.azurecr.io/flag-service:43823bc
          ports:
            - containerPort: 8002
