environments/prd/flag-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flag-service
  namespace: flag-service-prd
spec:
  type: ClusterIP
  selector:
    app: flag-service
  ports:
    - port: 8002
      targetPort: 8002
      protocol: TCP
      name: http


# kubectl run -it --rm curl --image=curlimages/curl -n flag-service-prd --restart=Never -- curl http://flag-service.flag-service-prd.svc.cluster.local:8002/health
