environments/prd/flag-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flag-service-ingress
  namespace: flag-service-prd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: flag.20.41.58.199.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flag-service
                port:
                  number: 8002
